--- a/src/todo.txt
+++ b/src/todo.txt
@@ -2,8 +2,14 @@
     2. App.vue에서 container ~ header 들 만들기
     3. 레이아웃에 해당하는 view들 만들기
     4. store 만들기
-5. git 연동
-6. 메인화면 만들기
+    5. git 연동
+
+==============================
+화면 만들기
+1. 로그인 화면 만들기 & 로그인 테스트
+2. 회원가입 화면 만들기
+3. 메인화면 만들기
     1) 좌측에 게시판 리스트
     2) 가운데에 게시판 글 리스트
     3) 헤더에 로그인 화면 등
+4. 글 CRUD
